--- a/skeleton_smash/CMakeLists.txt
+++ b/skeleton_smash/CMakeLists.txt
@@ -3,4 +3,6 @@ project(skeleton_smash)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(skeleton_smash smash.cpp Commands.cpp signals.cpp)
+add_executable(skeleton_smash smash.cpp Commands.cpp signals.cpp
+        signals.h
+        main.cpp)
