--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 .vscode/settings.json
 .vscode/settings.json
 .idea/editor.xml
+skeleton_smash/cmake-build-debug/.cmake/api/v1/reply/codemodel-v2-3e2570a8563f32d9f2e2.json
