Add ExternalCommands and JobList headers to relevant files - still not compiles but i reduced the number of errors

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "type": "by-gdb",
+            "type": "cppdbg",
             "request": "launch",
             "name": "Launch(gdb)",
             "program": "${fileBasenameNoExtension}",
