--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,18 +2,6 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "(lldb) Launch",
-            "type": "cppdbg",
-            "request": "launch",
-            "program": "enter program name, for example ${workspaceFolder}/a.out",
-            "args": [],
-            "stopAtEntry": false,
-            "cwd": "${fileDirname}",
-            "environment": [],
-            "externalConsole": false,
-            "MIMode": "lldb"
-        },
-        {
             "type": "cppdbg",
             "request": "launch",
             "name": "Launch(gdb)",
@@ -34,7 +22,7 @@
             "name": "(gdb) Launch",
             "type": "gdb",
             "request": "launch",
-            "program": "${workspaceFolder}/a.out",
+            "program": "${workspaceFolder}/smash",
             "args": [],
             "cwd": "${workspaceFolder}",
             "stopAtEntry": false,
