Implement CreateCommandFromArgs method and update launch.json

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,8 +9,7 @@
             "cwd": "${workspaceFolder}",
             "MIMode": "gdb",
             "stopAtEntry": false,
-            "console": "externalTerminal",  
-            "externalConsole": true,
+            "externalConsole": false,
             "setupCommands": [
               {
                 "text": "-enable-pretty-printing",
