Update launch.json to use internal console

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,7 @@
             "MIMode": "gdb",
             "stopAtEntry": false,
             "console": "externalTerminal",  
-            "externalConsole": true,
+            "externalConsole": false,
             "setupCommands": [
               {
                 "text": "-enable-pretty-printing",
